# pixi_bug_sub_dep

./: README.md  pyproject.toml
pixi_bug_sub_dep/: somecode.py
